gcc/testsuite/gcc.dg/cpp/19951227-1.c
/* { dg-do preprocess } */
#if 0xe-1	/* { dg-error "invalid suffix" } */
#endif
